--- a/index.html
+++ b/index.html
@@ -99,12 +99,40 @@
                                         <label for="lac">lachonete</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <label for="lac">Sorveteria</label>
+                                    </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <label for="lac">Chapeação</label>
+                                    </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <label for="lac">Estética Automotiva</label>
+                                    </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <label for="lac">Pintura</label>
+                                    </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <label for="lac">Oficina</label>
+                                    </div>
+                                    <div class="filtro_estabelecimento">
                                         <input type="radio" name="estabelecimento" id="pg" value="postog">
                                         <label for="pg">Posto de Gasolina</label>
                                     </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="pg" value="postog">
+                                        <label for="pg">Auto Elétrica</label>
+                                    </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="pg" value="postog">
+                                        <label for="pg">Chapeação</label>
+                                    </div>
                                 </div>
                             </div>
-                            <button class="rf" onclick="btnn('removefiltro')">Remover Filtro</button>
+                            <button class="rf button_modal" onclick="btnn('removefiltro')">Remover Filtro</button>
                             <button class="mg" onclick="btnn('Filtrar')">Filtrar</button>
                         </div>
                     </div>
@@ -153,49 +181,108 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Point do Açai</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Lanchonete</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Sorveteria</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
-                            <h1>Codigo:5802</h1>
+                            <h1>Codigo: 5802</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo as">
+                    <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="">
+                            <img src="img/logos/diegochapeacao.jpeg">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
-                            <h1>Tipo: Farmacia</h1>
-                            <h1>Codigo:</h1>
+                            <h1 class="p">Nome: Diego Chapeação Pintura</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Chapeação</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1>Codigo: 0842</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo as">
+                    <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="">
+                            <img src="img/logos/dijan.jpeg">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
-                            <h1>Tipo: Farmacia</h1>
-                            <h1>Codigo:</h1>
+                            <h1 class="p">Nome: Dijan Chapeação Pintura</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Chapeação</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1>Codigo: 5061</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo as">
+                    <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="">
+                            <img src="img/logos/autopostopr.jpeg">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
-                            <h1>Tipo: Farmacia</h1>
-                            <h1>Codigo:</h1>
+                            <h1 class="p">Nome: Auto Posto Pr</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Posto de Gasolina</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1>Codigo: 1439</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb as">
+                    <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="">
+                            <img src="img//logos/minibom.jpeg">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
-                            <h1>Tipo: Farmacia</h1>
-                            <h1>Codigo:</h1>
+                            <h1 class="p">Nome: Minibom</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Sorveteria</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
+                            <h1>Codigo: 9028</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo sb">
+                        <div class="area_img">
+                            <img src="img//logos/pijurauto.jpeg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Pijurauto</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Posto de Gasolina</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Ituporanga</h1>
+                            <h1>Codigo: 2376</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo sb">
+                        <div class="area_img">
+                            <img src="img//logos/vision.jpeg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Vision Estética Automotiva</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Estética Automotiva</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Aurora</h1>
+                            <h1>Codigo: 7605</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo sb">
+                        <div class="area_img">
+                            <img src="img//logos/tintas.jpeg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Tintas Wilson e Filho</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Pintura</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1>Codigo: 4812</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo sb">
+                        <div class="area_img">
+                            <img src="img//logos/ovande.jpeg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Ovande Oficina Mecânica</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Oficina</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
+                            <h1>Codigo: 3957</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo sb">
+                        <div class="area_img">
+                            <img src="img//logos/eletrica.jpeg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Auto Elétrica Pesenti Ltda</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Auto Elétrica</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
+                            <h1>Codigo: 6401</h1>
                         </div>
                     </div>
                 </div>
@@ -216,7 +303,7 @@
                             </div>
                             <div class="area_content_endereço">
                                 <div class="content_endereço_body">
-                                    <h1>Endereço:</h1>
+                                    
                                     <h1 class="rua"></h1>
                                     <h1>Número:</h1>
                                     <h1 class="num"></h1>
@@ -241,7 +328,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button><a href="" class="btnw">Entrar em contato</a></button>
+                        <button class="button_modal"><a href="" class="btnw">Entrar em contato</a></button>
                     </div>
                 </div>
             </div>
