--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
                                         <label for="lac">lachonete</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <input type="radio" name="estabelecimento" id="lac" value="sorveteria">
                                         <label for="lac">Sorveteria</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <input type="radio" name="estabelecimento" id="lac" value="chapeação">
                                         <label for="lac">Chapeação</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <input type="radio" name="estabelecimento" id="lac" value="estética automotiva">
                                         <label for="lac">Estética Automotiva</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <input type="radio" name="estabelecimento" id="lac" value="pintura">
                                         <label for="lac">Pintura</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <input type="radio" name="estabelecimento" id="lac" value="oficina">
                                         <label for="lac">Oficina</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
@@ -123,12 +123,8 @@
                                         <label for="pg">Posto de Gasolina</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="pg" value="postog">
+                                        <input type="radio" name="estabelecimento" id="pg" value="auto eletrica">
                                         <label for="pg">Auto Elétrica</label>
-                                    </div>
-                                    <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="pg" value="postog">
-                                        <label for="pg">Chapeação</label>
                                     </div>
                                 </div>
                             </div>
@@ -181,7 +177,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Point do Açai</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Sorveteria</h1>
+                            <h1 class="tiponame" data-estabelecimento="sorveteria">Tipo: Sorveteria</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 5802</h1>
                         </div>
@@ -192,7 +188,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Diego Chapeação Pintura</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Chapeação</h1>
+                            <h1 class="tiponame" data-estabelecimento="chapeação">Tipo: Chapeação</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 0842</h1>
                         </div>
@@ -203,7 +199,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Dijan Chapeação Pintura</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Chapeação</h1>
+                            <h1 class="tiponame" data-estabelecimento="chapeação">Tipo: Chapeação</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 5061</h1>
                         </div>
@@ -214,7 +210,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Auto Posto Pr</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Posto de Gasolina</h1>
+                            <h1 class="tiponame" data-estabelecimento="postog">Tipo: Posto de Gasolina</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 1439</h1>
                         </div>
@@ -225,7 +221,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Minibom</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Sorveteria</h1>
+                            <h1 class="tiponame" data-estabelecimento="sorveteria">Tipo: Sorveteria</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
                             <h1>Codigo: 9028</h1>
                         </div>
@@ -236,7 +232,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Pijurauto</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Posto de Gasolina</h1>
+                            <h1 class="tiponame" data-estabelecimento="postog">Tipo: Posto de Gasolina</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Ituporanga</h1>
                             <h1>Codigo: 2376</h1>
                         </div>
@@ -247,7 +243,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Vision Estética Automotiva</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Estética Automotiva</h1>
+                            <h1 class="tiponame" data-estabelecimento="estética automotiva">Tipo: Estética Automotiva</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Aurora</h1>
                             <h1>Codigo: 7605</h1>
                         </div>
@@ -258,7 +254,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Tintas Wilson e Filho</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Pintura</h1>
+                            <h1 class="tiponame" data-estabelecimento="pintura">Tipo: Pintura</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 4812</h1>
                         </div>
@@ -269,7 +265,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Ovande Oficina Mecânica</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Oficina</h1>
+                            <h1 class="tiponame" data-estabelecimento="oficina">Tipo: Oficina</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
                             <h1>Codigo: 3957</h1>
                         </div>
@@ -280,7 +276,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Auto Elétrica Pesenti Ltda</h1>
-                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Auto Elétrica</h1>
+                            <h1 class="tiponame" data-estabelecimento="auto eletrica">Tipo: Auto Elétrica</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
                             <h1>Codigo: 6401</h1>
                         </div>
