--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                                         <input type="radio" name="cidade" id="ag" value="agrolandia">
                                         <label for="ag">Agrolândia</label>
                                     </div>
+                                    <div class="filtro_cidade">
+                                        <input type="radio" name="cidade" id="au" value="aurora">
+                                        <label for="au">Aurora</label>
+                                    </div>
+                                    <div class="filtro_cidade">
+                                        <input type="radio" name="cidade" id="itu" value="ituporanga">
+                                        <label for="itu">Ituporanga</label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="filtro_estabelecimento_text">
@@ -222,7 +230,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Minibom</h1>
                             <h1 class="tiponame" data-estabelecimento="sorveteria">Tipo: Sorveteria</h1>
-                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
+                            <h1 class="cidadename" data-cidade="agrolandia">Cidade: Agrolândia</h1>
                             <h1>Codigo: 9028</h1>
                         </div>
                     </div>
@@ -233,7 +241,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Pijurauto</h1>
                             <h1 class="tiponame" data-estabelecimento="postog">Tipo: Posto de Gasolina</h1>
-                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Ituporanga</h1>
+                            <h1 class="cidadename" data-cidade="ituporanga">Cidade: Ituporanga</h1>
                             <h1>Codigo: 2376</h1>
                         </div>
                     </div>
@@ -244,7 +252,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Vision Estética Automotiva</h1>
                             <h1 class="tiponame" data-estabelecimento="estética automotiva">Tipo: Estética Automotiva</h1>
-                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Aurora</h1>
+                            <h1 class="cidadename" data-cidade="aurora">Cidade: Aurora</h1>
                             <h1>Codigo: 7605</h1>
                         </div>
                     </div>
@@ -266,7 +274,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Ovande Oficina Mecânica</h1>
                             <h1 class="tiponame" data-estabelecimento="oficina">Tipo: Oficina</h1>
-                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
+                            <h1 class="cidadename" data-cidade="agrolandia">Cidade: Agrolândia</h1>
                             <h1>Codigo: 3957</h1>
                         </div>
                     </div>
@@ -277,7 +285,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Auto Elétrica Pesenti Ltda</h1>
                             <h1 class="tiponame" data-estabelecimento="auto eletrica">Tipo: Auto Elétrica</h1>
-                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Agrolândia</h1>
+                            <h1 class="cidadename" data-cidade="agrolandia">Cidade: Agrolândia</h1>
                             <h1>Codigo: 6401</h1>
                         </div>
                     </div>
@@ -299,7 +307,6 @@
                             </div>
                             <div class="area_content_endereço">
                                 <div class="content_endereço_body">
-                                    
                                     <h1 class="rua"></h1>
                                     <h1>Número:</h1>
                                     <h1 class="num"></h1>
