--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="rf button_modal" onclick="btnn('removefiltro')">Remover Filtro</button>
+                            <button class="rf " onclick="btnn('removefiltro')">Remover Filtro</button>
                             <button class="mg" onclick="btnn('Filtrar')">Filtrar</button>
                         </div>
                     </div>
