--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     </div>
                     <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="img//logos/ovande.jpeg">
+                            <img src="img//logos/ovande.png">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Ovande Oficina Mecânica</h1>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="img//logos/eletrica.jpeg">
+                            <img src="img//logos/eletrica.png">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Auto Elétrica Pesenti Ltda</h1>
