--- a/index.html
+++ b/index.html
@@ -289,6 +289,28 @@
                             <h1>Codigo: 6401</h1>
                         </div>
                     </div>
+                    <div class="area_conteudo sb">
+                        <div class="area_img">
+                            <img src="img//logos/">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Chaves JVS</h1>
+                            <h1 class="tiponame" data-estabelecimento="chaveiro">Tipo: Chaveiro</h1>
+                            <h1 class="cidadename" data-cidade="agrolandia">Cidade: Agrolândia</h1>
+                            <h1>Codigo: 4561</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo sb">
+                        <div class="area_img">
+                            <img src="img//logos/">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Auto Car</h1>
+                            <h1 class="tiponame" data-estabelecimento="lavacao">Tipo: Lavação</h1>
+                            <h1 class="cidadename" data-cidade="ituporanga">Cidade: Ituporanga</h1>
+                            <h1>Codigo: 6654</h1>
+                        </div>
+                    </div>
                 </div>
                 <div class="modalc">
                     <div class="area_content_open">
