--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                                         <input type="radio" name="estabelecimento" id="pg" value="auto eletrica">
                                         <label for="pg">Auto Elétrica</label>
                                     </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="lav" value="lavacao">
+                                        <label for="lav">Lavação</label>
+                                    </div>
                                 </div>
                             </div>
                             <button class="rf " onclick="btnn('removefiltro')">Remover Filtro</button>
@@ -291,7 +295,7 @@
                     </div>
                     <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="img//logos/">
+                            <img src="img//logos/chaveiro.png">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Chaves JVS</h1>
@@ -302,7 +306,7 @@
                     </div>
                     <div class="area_conteudo sb">
                         <div class="area_img">
-                            <img src="img//logos/">
+                            <img src="img//logos/autocar.png">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Auto Car</h1>
