--- a/index.html
+++ b/index.html
@@ -107,32 +107,32 @@
                                         <label for="lac">lachonete</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="sorveteria">
-                                        <label for="lac">Sorveteria</label>
+                                        <input type="radio" name="estabelecimento" id="sorv" value="sorveteria">
+                                        <label for="sorv">Sorveteria</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="chapeação">
-                                        <label for="lac">Chapeação</label>
+                                        <input type="radio" name="estabelecimento" id="chap" value="chapeação">
+                                        <label for="chap">Chapeação</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="estética automotiva">
-                                        <label for="lac">Estética Automotiva</label>
+                                        <input type="radio" name="estabelecimento" id="est" value="estética automotiva">
+                                        <label for="est">Estética Automotiva</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="pintura">
-                                        <label for="lac">Pintura</label>
+                                        <input type="radio" name="estabelecimento" id="pint" value="pintura">
+                                        <label for="pint">Pintura</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="lac" value="oficina">
-                                        <label for="lac">Oficina</label>
+                                        <input type="radio" name="estabelecimento" id="ofic" value="oficina">
+                                        <label for="ofic">Oficina</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
                                         <input type="radio" name="estabelecimento" id="pg" value="postog">
                                         <label for="pg">Posto de Gasolina</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="pg" value="auto eletrica">
-                                        <label for="pg">Auto Elétrica</label>
+                                        <input type="radio" name="estabelecimento" id="auto" value="auto eletrica">
+                                        <label for="auto">Auto Elétrica</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
                                         <input type="radio" name="estabelecimento" id="lav" value="lavacao">
