--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <h1>Codigo: 9731</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img/logos/POINT.png">
                         </div>
@@ -194,7 +194,7 @@
                             <h1>Codigo: 5802</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img/logos/diegochapeacao.jpeg">
                         </div>
@@ -205,7 +205,7 @@
                             <h1>Codigo: 0842</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img/logos/dijan.jpeg">
                         </div>
@@ -216,7 +216,7 @@
                             <h1>Codigo: 5061</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img/logos/autopostopr.jpeg">
                         </div>
@@ -227,7 +227,7 @@
                             <h1>Codigo: 1439</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/minibom.jpeg">
                         </div>
@@ -238,7 +238,7 @@
                             <h1>Codigo: 9028</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/pijurauto.jpeg">
                         </div>
@@ -249,7 +249,7 @@
                             <h1>Codigo: 2376</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/vision.jpeg">
                         </div>
@@ -260,7 +260,7 @@
                             <h1>Codigo: 7605</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/tintas.jpeg">
                         </div>
@@ -271,7 +271,7 @@
                             <h1>Codigo: 4812</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/ovande.png">
                         </div>
@@ -282,7 +282,7 @@
                             <h1>Codigo: 3957</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/eletrica.png">
                         </div>
@@ -293,7 +293,7 @@
                             <h1>Codigo: 6401</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/chaveiro.png">
                         </div>
@@ -304,7 +304,7 @@
                             <h1>Codigo: 4561</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img//logos/autocar.png">
                         </div>
