--- a/index.html
+++ b/index.html
@@ -304,6 +304,17 @@
                             <h1>Codigo: 6654</h1>
                         </div>
                     </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="img//logos/danieleletro.jpeg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Daniel Eletro</h1>
+                            <h1 class="tiponame" data-estabelecimento="loja">Tipo: Loja</h1>
+                            <h1 class="cidadename" data-cidade="ituporanga">Cidade: Ituporanga</h1>
+                            <h1>Codigo: 4827</h1>
+                        </div>
+                    </div>
                 </div>
                 <div class="modalc">
                     <div class="area_content_open">
