--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                                         <input type="radio" name="estabelecimento" id="lav" value="lavacao">
                                         <label for="lav">Lavação</label>
                                     </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="loja" value="loja">
+                                        <label for="loja">Loja</label>
+                                    </div>
                                 </div>
                             </div>
                             <button class="rf " onclick="btnn('removefiltro')">Remover Filtro</button>
