--- a/index.html
+++ b/index.html
@@ -319,6 +319,28 @@
                             <h1>Codigo: 4827</h1>
                         </div>
                     </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="img//logos/jsantos.png">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: J.Santos</h1>
+                            <h1 class="tiponame" data-estabelecimento="loja">Tipo: Loja</h1>
+                            <h1 class="cidadename" data-cidade="ituporanga">Cidade: Ituporanga</h1>
+                            <h1>Codigo: 1934</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="img//logos/pitstop.jepg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: J.Santos</h1>
+                            <h1 class="tiponame" data-estabelecimento="lavacao">Tipo: Lavação</h1>
+                            <h1 class="cidadename" data-cidade="agrolandia">Cidade: Agrolândia</h1>
+                            <h1>Codigo: 7502</h1>
+                        </div>
+                    </div>
                 </div>
                 <div class="modalc">
                     <div class="area_content_open">
