--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
                     </div>
                     <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="img//logos/pitstop.jepg">
+                            <img src="img//logos/pitstop.jpeg">
                         </div>
                         <div class="area_text">
-                            <h1 class="p">Nome: J.Santos</h1>
+                            <h1 class="p">Nome: Pit Stop</h1>
                             <h1 class="tiponame" data-estabelecimento="lavacao">Tipo: Lavação</h1>
                             <h1 class="cidadename" data-cidade="agrolandia">Cidade: Agrolândia</h1>
                             <h1>Codigo: 7502</h1>
