--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                                         <input type="radio" name="estabelecimento" id="loja" value="loja">
                                         <label for="loja">Loja</label>
                                     </div>
+                                    <div class="filtro_estabelecimento">
+                                        <input type="radio" name="estabelecimento" id="mc" value="mc">
+                                        <label for="mc">Materias de Construção</label>
+                                    </div>
                                 </div>
                             </div>
                             <button class="rf " onclick="btnn('removefiltro')">Remover Filtro</button>
@@ -155,6 +159,28 @@
             <div class="conteiner_conteudo">
                 <div class="area">
                     <div class="area_conteudo sm">
+                        <div class="area_img">
+                            <img src="img/logos/aj.png" alt="Logo da Farmacia aj venturi">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Posto Coração do Estado</h1>
+                            <h1 class="tiponame" data-estabelecimento="postog">Tipo: Posto</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1>Codigo: 9768</h1>
+                        </div>
+                    </div>
+                     <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="img/logos/aj.png" alt="Logo da Farmacia aj venturi">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Loja Da Kau</h1>
+                            <h1 class="tiponame" data-estabelecimento="mc">Tipo: Materias de Construção</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1>Codigo: 2764</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="img/logos/aj.png" alt="Logo da Farmacia aj venturi">
                         </div>
