--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="area">
                     <div class="area_conteudo sm">
                         <div class="area_img">
-                            <img src="img/logos/aj.png" alt="Logo da Farmacia aj venturi">
+                            <img src="img/logos/posto.png" alt="Logo Posto Coração do Estado">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Posto Coração do Estado</h1>
@@ -171,7 +171,7 @@
                     </div>
                      <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="img/logos/aj.png" alt="Logo da Farmacia aj venturi">
+                            <img src="img/logos/kau.png" alt="Logo Loja da Kau">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Loja Da Kau</h1>
