--- a/index.html
+++ b/index.html
@@ -142,10 +142,6 @@
                                         <input type="radio" name="estabelecimento" id="loja" value="loja">
                                         <label for="loja">Loja</label>
                                     </div>
-                                    <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" id="mc" value="mc">
-                                        <label for="mc">Materias de Construção</label>
-                                    </div>
                                 </div>
                             </div>
                             <button class="rf " onclick="btnn('removefiltro')">Remover Filtro</button>
@@ -175,7 +171,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Loja Da Kau</h1>
-                            <h1 class="tiponame" data-estabelecimento="mc">Tipo: Materias de Construção</h1>
+                            <h1 class="tiponame" data-estabelecimento="loja">Tipo: Loja</h1>
                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 2764</h1>
                         </div>
