--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
                                         <input type="radio" name="cidade" id="itu" value="ituporanga">
                                         <label for="itu">Ituporanga</label>
                                     </div>
+                                    <div class="filtro_cidade">
+                                        <input type="radio" name="cidade" id="vm" value="vidalramos">
+                                        <label for="vm">Vidal Ramos</label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="filtro_estabelecimento_text">
@@ -142,6 +146,7 @@
                                         <input type="radio" name="estabelecimento" id="loja" value="loja">
                                         <label for="loja">Loja</label>
                                     </div>
+                                    
                                 </div>
                             </div>
                             <button class="rf " onclick="btnn('removefiltro')">Remover Filtro</button>
@@ -361,6 +366,17 @@
                             <h1 class="tiponame" data-estabelecimento="lavacao">Tipo: Lavação</h1>
                             <h1 class="cidadename" data-cidade="agrolandia">Cidade: Agrolândia</h1>
                             <h1>Codigo: 7502</h1>
+                        </div>
+                    </div>
+                     <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="img//logos/pitstop.jpeg">
+                        </div>
+                        <div class="area_text">
+                            <h1 class="p">Nome: Santos Auto Center/h1>
+                            <h1 class="tiponame" data-estabelecimento="ofc">Tipo: Oficina</h1>
+                            <h1 class="cidadename" data-cidade="vidalramos">Cidade: Vidal Ramos</h1>
+                            <h1>Codigo: 9687</h1>
                         </div>
                     </div>
                 </div>
