--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                             <img src="img//logos/pitstop.jpeg">
                         </div>
                         <div class="area_text">
-                            <h1 class="p">Nome: Santos Auto Center/h1>
+                            <h1 class="p">Nome: Santos Auto Center</h1>
                             <h1 class="tiponame" data-estabelecimento="ofc">Tipo: Oficina</h1>
                             <h1 class="cidadename" data-cidade="vidalramos">Cidade: Vidal Ramos</h1>
                             <h1>Codigo: 9687</h1>
