--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Santos Auto Center</h1>
-                            <h1 class="tiponame" data-estabelecimento="ofic">Tipo: Oficina</h1>
+                            <h1 class="tiponame" data-estabelecimento="oficina">Tipo: Oficina</h1>
                             <h1 class="cidadename" data-cidade="vidalramos">Cidade: Vidal Ramos</h1>
                             <h1>Codigo: 9687</h1>
                         </div>
