--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     </div>
                      <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="img//logos/autocenter.jpeg">
+                            <img src="img//logos/autocenter.png">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Santos Auto Center</h1>
